--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Cache
+application.vendor=alex
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Cache.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-logging-1.2.jar=C:\\Users\\BuiRai\\UADY\\5o Semestre\\Arquitectura de Software\\Tareas\\Componentes y Frameworks\\EjemploJCS\\JCSExample\\dist\\lib\\commons-logging-1.2.jar
 file.reference.concurrent.jar=C:\\Users\\BuiRai\\UADY\\5o Semestre\\Arquitectura de Software\\Tareas\\Componentes y Frameworks\\EjemploJCS\\JCSExample\\dist\\lib\\concurrent.jar
